archive/test/test_run_fixed7_log.txt
Test dir: C:\Users\Franz\OneDrive\01_Promotion\01 Data\new-pipeline\src\meningioma_ftir_pipeline\test
Pipeline dir: C:\Users\Franz\OneDrive\01_Promotion\01 Data\new-pipeline\src
Verifying data files...
Training set: 14 samples
Test set: 6 samples
Wavenumbers: 441 points
[2025-10-21 08:30:00] === MATLAB VERSION INFO ===
[2025-10-21 08:30:00] Bioinformatics Toolbox Version 24.2
[2025-10-21 08:30:00] Data Acquisition Toolbox Version 24.2
[2025-10-21 08:30:00] Deep Learning Toolbox Version 24.2
[2025-10-21 08:30:00] Image Processing Toolbox Version 24.2
[2025-10-21 08:30:00] MATLAB Version 24.2
[2025-10-21 08:30:00] MATLAB Coder Version 24.2
[2025-10-21 08:30:00] MATLAB Compiler Version 24.2
[2025-10-21 08:30:00] Medical Imaging Toolbox Version 24.2
[2025-10-21 08:30:00] Optimization Toolbox Version 24.2
[2025-10-21 08:30:00] Parallel Computing Toolbox Version 24.2
[2025-10-21 08:30:00] Signal Processing Toolbox Version 24.2
[2025-10-21 08:30:00] Statistics and Machine Learning Toolbox Version 24.2
[2025-10-21 08:30:00] ========================
[2025-10-21 08:30:00] Starting pipeline execution with test configuration
[2025-10-21 08:30:00] Starting Phase 0: Quality Control
Loading data...
Processing training set...
Debug - Sample 1, Spectrum 1:
Signal: 0.1324, Noise: 0.0002, SNR: 597.0585
Debug - Sample 1: Max absorbance: 0.1375
Debug - Sample 1: Baseline SD: 0.0013
Debug - Sample 1: Peak ratio: 1.2482
Training set processing complete.
Processing test set...
Debug - Sample 1, Spectrum 1:
Signal: 0.1740, Noise: 0.0014, SNR: 121.6123
Debug - Sample 1: Max absorbance: 0.1789
Debug - Sample 1: Baseline SD: 0.0015
Debug - Sample 1: Peak ratio: 1.8356
Test set processing complete.
[2025-10-21 08:30:07] Starting Phase 1: Data Loading
Loading raw data...
Loading QC results...
Processing training set...
Processing test set...
Creating analysis-ready datasets...
DEBUG: y_train class: categorical
DEBUG: y_train is categorical with 3 unique values
DEBUG: y_train categories: WHO-1, WHO-2, WHO-3
DEBUG: trainingData.y field type: double
DEBUG: trainingData has y field

Dataset dimensions after QC:
Training set: 14 samples × 441 wavenumbers
Test set: 6 samples × 441 wavenumbers

Class distribution:
Training WHO-1: 7, WHO-3: 7
Test WHO-1: 3, WHO-3: 3
Saving processed data...
Data preparation complete.
[2025-10-21 08:30:09] Starting Phase 2: Feature Selection
Loading preprocessed data...
DEBUG: Fields in trainingData: X y probe_ids probe_table 
Loading preprocessed data...
DEBUG: trainingData.y class: double
DEBUG: trainingData.y size: [[14 1]]
Computing PCA on training data...
Selected 4 PCs explaining 97.2% variance
DEBUG: WHO-1 samples: 7, WHO-3 samples: 7
[2025-10-21 08:30:13] Starting Phase 3: Cross-Validation
Loading transformed training data...\nSetting up cross-validation...\nUsing 3 folds from configuration\nUsing 10 repeats from configuration\nCross-validation settings: 3 folds, 10 repeats\n
Evaluating LDA...
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
AUC calculation: Using positive class of type double
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
AUC calculation: Using positive class of type double
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
AUC calculation: Using positive class of type double
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
AUC calculation: Using positive class of type double
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
AUC calculation: Using positive class of type double
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
AUC calculation: Using positive class of type double
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
AUC calculation: Using positive class of type double
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
AUC calculation: Using positive class of type double
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
AUC calculation: Using positive class of type double
Repeat 10/10
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
[Warning: Zero variance predictor detected. Using pseudolinear discriminant instead.] 
[> In run_cross_validation (line 107)
In run_pipeline_test_simplified (line 71)] 
AUC calculation: Using positive class of type double

Evaluating PLSDA...
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
Repeat 10/10
AUC calculation: Using positive class of type double

Evaluating SVM...
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
Repeat 10/10
AUC calculation: Using positive class of type double

Evaluating RandomForest...
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
AUC calculation: Using positive class of type double
Repeat 10/10
AUC calculation: Using positive class of type double

Aggregating results...

Best classifier: SVM
Mean F2-score: 0.469 ± 0.115
Model selection complete.
[2025-10-21 08:34:47] Starting Phase 4: Train Final Model
Loading best classifier info and data...
Using provided cv_results to determine best classifier...
Selected SVM as best classifier (F2 score: 0.469)
Training final model (SVM)...

===== ERROR OCCURRED =====
Error message: Error in train_final_model: MATLAB:nonExistentField
Line 92: Unrecognized field name "optimal_params".
Function: train_final_model, Line: 115
Function: run_pipeline_test_simplified, Line: 75
Error using train_final_model (line 115)
Error in train_final_model: MATLAB:nonExistentField
Line 92: Unrecognized field name "optimal_params".

Error in run_pipeline_test_simplified (line 75)
        final_model = train_final_model(cfg, cv_results);
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
